# QPointHighlight

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  QPointHighlightArchitecture.drawio  README.md  Settings.ini
Benchmarks/: CMakeLists.txt  main.becnhmarks.cpp
CMake/: ClangTidyOptions.cmake  CompilerOptions.cmake
Include/: MainWindow.h  RenderWidget.h
Include/ArchitectureCore/: GenerateAreaController.h  GenerateAreaModel.h  GeneratePointsController.h  GeneratePointsModel.h
Include/Async/: Context.h
Include/Domain/: UIData.h
Include/Interfaces/: IController.h  IModel.h  IRenderable.h
Include/Render/: AreaBatchRender.h  BatchPointsRender.h  CircleAreaBatchRender.h
Source/: MainWindow.cpp  RenderWidget.cpp  main.cpp
Source/ArchitectureCore/: CMakeLists.txt  GenerateAreaController.cpp  GenerateAreaModel.cpp  GeneratePointsController.cpp  GeneratePointsModel.cpp
Source/Async/: CMakeLists.txt  Context.cpp
Source/Render/: AreaBatchRender.cpp  BatchPointsRender.cpp  CMakeLists.txt  CircleAreaBatchRender.cpp
Tests/: CMakeLists.txt  main.tests.cpp
UI/: MainWindow.ui
